remove cam_capture code and reconstruct uvc code
Change-Id: I04ddad6e149d6a0daac01da3f517b4f4d304e3ef

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,24 +2,37 @@ cmake_minimum_required(VERSION 2.8.0 FATAL_ERROR)
 PROJECT(uvc_app)
 
 add_definitions(-DCONFIG_USB_CONFIGFS_F_UVC_ROCKCHIP)
-include_directories(include ext)
-
-set(SOURCE
-    src/main.c
-    src/uvc-gadget.c
-    src/uvc_video.cpp
-    src/yuv.c
-    src/uvc_control.c
-    src/uvc_encode.cpp
-    ext/mediactl.c
-    src/rkcam_capture.c
-    src/rkcam_control.c
-    src/mpi_enc.c
-)
-
+include_directories(uvc)
 #set(CMAKE_C_FLAGS "-static ${CMAKE_C_FLAGS}")
 
-ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE})
-target_link_libraries(${PROJECT_NAME} pthread rkisp drm rockchip_mpp)
+set(LIB_SOURCE
+    uvc/uvc-gadget.c
+    uvc/uvc_video.cpp
+    uvc/yuv.c
+    uvc/uvc_control.c
+    uvc/uvc_encode.cpp
+    uvc/mpi_enc.c
+)
+add_library(rkuvc SHARED ${LIB_SOURCE})
+target_link_libraries(rkuvc pthread drm rockchip_mpp)
 
-install(TARGETS ${PROJECT_NAME} DESTINATION bin)
+set(SOURCE
+    main.c
+    ${LIB_SOURCE}
+)
+
+ADD_EXECUTABLE(uvc_app ${SOURCE})
+target_link_libraries(uvc_app pthread drm rockchip_mpp)
+
+install(TARGETS rkuvc DESTINATION lib)
+install(DIRECTORY ./uvc DESTINATION include
+        FILES_MATCHING PATTERN "*.h")
+
+install(TARGETS uvc_app DESTINATION bin)
+install(DIRECTORY . DESTINATION bin
+        FILES_MATCHING PATTERN "*.sh"
+        PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
+        GROUP_READ GROUP_WRITE GROUP_EXECUTE
+        WORLD_READ WORLD_WRITE WORLD_EXECUTE)
+
+install(FILES test_image.nv12 DESTINATION bin)
