use drm/ion fd for MJPEG encode
Change-Id: Ib9fc3ecbc6c64489d28222311d0620dc26a2ac74
Signed-off-by: Zhihua Wang <hogan.wang@rock-chips.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ set(LIB_SOURCE
     uvc/uvc_encode.cpp
     uvc/mpi_enc.c
     uvc/uevent.c
+    uvc/drm.c
 )
 add_library(rkuvc SHARED ${LIB_SOURCE})
 target_link_libraries(rkuvc pthread drm rockchip_mpp)
