--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,14 @@ set(SOURCE
 ADD_EXECUTABLE(uvc_app ${SOURCE})
 target_link_libraries(uvc_app pthread drm rockchip_mpp)
 
+set(CAMERA_SOURCE
+    camera_uvc.c
+    ${LIB_SOURCE}
+)
+
+ADD_EXECUTABLE(camera_uvc ${CAMERA_SOURCE})
+target_link_libraries(camera_uvc rkisp rkisp_api pthread drm rockchip_mpp)
+
 install(TARGETS rkuvc DESTINATION lib)
 install(DIRECTORY ./uvc DESTINATION include
         FILES_MATCHING PATTERN "*.h")
@@ -34,3 +42,5 @@ install(DIRECTORY . DESTINATION bin
         PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
         GROUP_READ GROUP_WRITE GROUP_EXECUTE
         WORLD_READ WORLD_WRITE WORLD_EXECUTE)
+
+install(TARGETS camera_uvc DESTINATION bin)
